Fixed logo cropping

--- a/exercises/ex2/includes/style.css
+++ b/exercises/ex2/includes/style.css
@@ -15,6 +15,7 @@ header {height:100px;}
 	font-weight:bold;
 	background: url(../images/logo.png) no-repeat left center;
 	width:197px;
+	height:37px;
 	text-align:right;
 	display:inline-block;
 }
